School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_cast/cast_wrongType.deca
//Cast d'un Int pour un Float

{
    float f = (int)(1.6);
}