School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_cast/cast_Int_Int.deca
//Caster un Int en un Int
//erreur attendue : (pas d'erreur pour le moment, on arrive pas à récupérer le type du cast)
{
    int a = (int)(10);
}